--- a/Zhelock/index.html
+++ b/Zhelock/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio</title>
+        <title>Resume</title>
 
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.7.4/css/foundation.min.css">
@@ -21,7 +21,7 @@
             <div class="social-img">
                 <ul>
                     <li><a href="https://www.facebook.com/gutaesingle/" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#" target="_blank"><i class="fa fa-github fa-github"></i></a></li>
+                    <li><a href="https://github.com/Zhelock/miniresume" target="_blank"><i class="fa fa-github fa-github"></i></a></li>
                 </ul>
             </div>
             <center><h1>About me</h1></center>
